@@ -30,11 +30,11 @@ class Specs
   end
 
   def simplekeys_only
-    new(:key => %w(string hash integer float))
+    new(:key => %w(string hash integer))
   end
 
   def simplevalues_only
-    new(:value => %w(string hash integer float))
+    new(:value => %w(string hash integer))
   end
 
   def without_increment
@@ -1307,7 +1307,7 @@ end}
   },
   'adapter_mongo' => {
     :build => 'Moneta::Adapters::Mongo.new(:db => "adapter_mongo")',
-    :specs => ADAPTER_SPECS.with_native_expires,
+    :specs => ADAPTER_SPECS.with_native_expires.simplevalues_only,
     :tests => %{
 it 'automatically deletes expired document' do
   store.store('key', 'val', :expires => 5)
@@ -1318,7 +1318,7 @@ end}
   },
   'adapter_mongo_with_default_expires' => {
     :build => %{Moneta::Adapters::Mongo.new(:expires => 1)},
-    :specs => ADAPTER_SPECS.with_expires.with_default_expires
+    :specs => ADAPTER_SPECS.with_expires.with_default_expires.simplevalues_only
   },
   'adapter_pstore' => {
     :build => 'Moneta::Adapters::PStore.new(:file => File.join(make_tempdir, "adapter_pstore"))',
