@@ -25,8 +25,15 @@ describe_moneta "adapter_mongo_with_default_expires" do
   it_should_behave_like 'increment'
   it_should_behave_like 'multiprocess'
   it_should_behave_like 'null_stringkey_stringvalue'
+  it_should_behave_like 'null_stringkey_hashvalue'
+  it_should_behave_like 'null_stringkey_integervalue'
   it_should_behave_like 'persist_stringkey_stringvalue'
+  it_should_behave_like 'persist_stringkey_hashvalue'
+  it_should_behave_like 'persist_stringkey_integervalue'
   it_should_behave_like 'returndifferent_stringkey_stringvalue'
+  it_should_behave_like 'returndifferent_stringkey_hashvalue'
   it_should_behave_like 'store_stringkey_stringvalue'
+  it_should_behave_like 'store_stringkey_hashvalue'
+  it_should_behave_like 'store_stringkey_integervalue'
   it_should_behave_like 'store_large'
 end
